syntax = "proto3";
option csharp_namespace = "Elsa.ProtoActor.ProtoBuf";
package Elsa.ProtoActor.ProtoBuf;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "Shared.proto";
import "WorkflowInstance.Messages.proto";

service WorkflowInstance {
  rpc Create (ProtoCreateWorkflowInstanceRequest) returns (ProtoCreateWorkflowInstanceResponse);
  rpc Run (ProtoRunWorkflowInstanceRequest) returns (ProtoRunWorkflowInstanceResponse);
  rpc CreateAndRun (ProtoCreateAndRunWorkflowInstanceRequest) returns (ProtoRunWorkflowInstanceResponse);
  rpc Stop (Empty) returns (Empty);
  rpc Cancel (Empty) returns (Empty);
  rpc ExportState(Empty) returns (ProtoExportWorkflowStateResponse);
  rpc ImportState(ProtoImportWorkflowStateRequest) returns (Empty);
}